/*
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";
package NES;

/*
The serializable wrapper definition for probeRequestParam
 */
message GRPCStatProbeRequest {
  string logicalSourceName = 1;
  string fieldName = 2;
  int32 statCollectorType = 3;
  repeated string physicalSourceNames = 4;
  string probeExpression = 5;
  int64 startTime = 6;
  int64 endTime = 7;
  bool merge = 8;
}